--- a/src/app/components/filters/dialog/filters-dialog-and.component.css
+++ b/src/app/components/filters/dialog/filters-dialog-and.component.css
@@ -1,7 +1,19 @@
-:host {
+mat-card {
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  background-color: #363636;
+}
 
+article {
+  display: flex;
+  gap: 0.25rem;
+  padding: 0.5rem;
+}
+
+section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   gap: 1rem;
+  width: 100%;
 }
