--- a/src/app/components/filters/dialog/filters-dialog-field.component.html
+++ b/src/app/components/filters/dialog/filters-dialog-field.component.html
@@ -1,10 +1,1 @@
-@if(first) {
-  <span i18n="Filter condition">Where</span>
-} @else {
-  <span i18n="Filter condition">And</span>
-}
-<app-autocomplete [options]="labelledProperties" [value]="columnValue" (valueChange)="onPropertyChange($event)" />
-
-<app-autocomplete [options]="labelledOperators" [value]="operatorLabel" (valueChange)="onOperatorChange($event)" />
-
-<app-filters-dialog-input [input]="input" [statuses]="labelledStatuses" (valueChange)="onInputChange($event)"/>
+<app-autocomplete [options]="labelledProperties" [value]="value" (valueChange)="writeValue($event)" label="Column" />
