test: environment and dialog

--- a/src/app/components/navigation/environment/dialog/add-environment.dialog.html
+++ b/src/app/components/navigation/environment/dialog/add-environment.dialog.html
@@ -24,7 +24,7 @@
   </section>
 </mat-dialog-content>
 
-<mat-dialog-actions>
+<mat-dialog-actions align="end">
   <button mat-button matDialogClose i18n>Cancel</button>
   <button mat-flat-button color="primary" [matDialogClose]="formGroup.value.host" [disabled]="!testedEnvironment" i18n>Confirm</button>
 </mat-dialog-actions>
