--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,3 +1,10 @@
 h1, h2, h3, h4, h5, h6, p {
   margin: 0 !important;
 }
+
+.environment {
+  background: white;
+  padding: 0 1rem;
+  border-radius: 1rem;
+  height: fit-content;
+}
