--- a/src/app/components/dialogs/confirmation/confirmation.dialog.html
+++ b/src/app/components/dialogs/confirmation/confirmation.dialog.html
@@ -6,7 +6,7 @@
   }
 </mat-dialog-content>
 
-<mat-dialog-actions>
+<mat-dialog-actions align="end">
   <button mat-flat-button [mat-dialog-close]="false">{{ data.actions?.cancel ?? defaultActions.cancel }}</button>
   <button mat-flat-button [mat-dialog-close]="true" color="primary">{{ data.actions?.confirm ?? defaultActions.confirm }}</button>
 </mat-dialog-actions>
