--- a/src/app/components/filters/filters-toolbar.component.scss
+++ b/src/app/components/filters/filters-toolbar.component.scss
@@ -27,8 +27,9 @@ button {
 .manage-filters {
   @include flex-col();
   padding: 0.5rem;
-}
-
-.manage-filters mat-icon {
-  transform: scale(1.5);
+  border-radius: 1rem;
+  mat-icon {
+    transform: scale(1.5);
+    margin: 0;
+  }
 }
