--- a/src/app/components/filters/filters-dialog-or.component.scss
+++ b/src/app/components/filters/filters-dialog-or.component.scss
@@ -11,8 +11,8 @@ span {
 }
 
 .filters {
-  background-color: #f5f5f5;
-  border: 1px solid #e0e0e0;
+  background-color: var(--armonik-container-background-light) !important;
+  border: 1px solid var(--armonik-container-background);
   border-radius: 0.5rem;
   padding: 1rem;
 }
