--- a/src/assets/styles/angular.scss
+++ b/src/assets/styles/angular.scss
@@ -1,4 +1,5 @@
 @use 'mixins.scss' as *;
+@use '@angular/material' as mat;
 
 mat-card {
   padding: 1rem;
@@ -20,6 +21,9 @@ mat-card-title {
 mat-toolbar {
   @include flex-row(1rem);
   padding: 1rem !important;
+  background-color: var(--armonik-container-background) !important;
+  border-radius: 1rem;
+  margin-bottom: 0.25rem !important;
 }
 
 mat-toolbar-row {
@@ -29,4 +33,77 @@ mat-toolbar-row {
 
 mat-form-field {
   width: 100%;
+}
+
+.cdk-overlay-pane { // Mat dialog container
+  max-width: 100% !important;
+}
+
+mat-sidenav {
+  padding: 0.25rem;
+  background-color: var(--armonik-container-background) !important;
+}
+
+mat-nav-list > mat-divider {
+  margin: 0.5rem !important;
+}
+
+.mat-mdc-card-header-text {
+  width: 100%;
+}
+
+.mat-mdc-menu-content {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+
+article > .mat-mdc-menu-item-text {
+  min-width: 20em !important;
+}
+
+// Drag components
+[cdkDragHandle] {
+  cursor: move;
+}
+
+.cdk-drag-preview {
+  @include flex-row($gap: 1rem, $justify: start, $wrap: nowrap);
+  }
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.cdk-drop-list-dragging li:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+// Notifications
+.mat-mdc-snackbar-surface {
+  color: white !important;
+  button {
+    color: white !important;
+  }
+}
+
+.error {
+  .mat-mdc-snackbar-surface {
+    background-color: var(--armonik-error) !important;
+  }
+}
+
+.warning {
+  .mat-mdc-snackbar-surface {
+    background-color: light-dark(#FF9D5C, #FF6000) !important;
+  }
+}
+
+.success {
+  .mat-mdc-snackbar-surface {
+    background-color: light-dark(#446555, #2c4d3e) !important;
+  }
 }
