--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,130 +1,24 @@
 @use 'assets/styles' as *;
-/* You can add global styles to this file, and also import other style files */
+
+html {
+  color-scheme: light dark;
+}
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  border: 0;
+body.light-blue {
+  @include apply-blue-theme();
 }
 
-.mat-mdc-snack-bar-container.success {
-  --mat-snackbar-container-color: #4caf50;
-  --mat-mdc-snack-bar-button-color: #000;
-  --mat-snackbar-supporting-text-color: #000;
+body.dark-green {
+  @include apply-green-theme();
 }
 
-.mat-mdc-snack-bar-container.error {
-  --mat-snackbar-container-color: #f44336;
-  --mat-mdc-snack-bar-button-color: #000;
-  --mat-snackbar-supporting-text-color: #000;
+body.light-pink {
+  @include apply-pink-theme();
 }
 
-.mat-mdc-snack-bar-container.warning {
-  --mat-snackbar-container-color: #ff9800;
-  --mat-mdc-snack-bar-button-color: #000;
-  --mat-snackbar-supporting-text-color: #000;
-}
-
-.mat-mdc-snack-bar-container.info {
-  --mat-snackbar-container-color: #2196f3;
-  --mat-mdc-snack-bar-button-color: #000;
-  --mat-snackbar-supporting-text-color: #000;
-}
-
-.mat-mdc-card-header-text {
-  width: 100%;
-}
-
-.table-container {
-  max-height: 60vh;
-}
-
-.mat-mdc-menu-content {
-  padding-top: 0px !important;
-  padding-bottom: 0px !important;
-}
-
-article > .mat-mdc-menu-item-text {
-  min-width: 20em !important;
-}
-
-.services {
-  padding-right: 0 !important;
-  min-width: 10rem;
-}
-
-.services .mat-mdc-menu-item-text {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
-
-app-table-column-header {
-  display: flex;
-  align-items: center;
-}
-
-app-table-index-actions-toolbar, app-table-dashboard-actions-toolbar {
-  flex-grow: 1;
-}
-
-.custom-file-upload {
-  border: 1px solid rgba(189, 189, 189, 0.6);
-  border-radius: 0.4em;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6px 12px;
-  cursor: pointer;
-}
-
-.custom-file-upload > span {
-  padding-left: 10px;
-}
-
-.custom-file-upload:hover {
-  background-color: rgba(189, 189, 189, 0.3);
-}
-
-[cdkDragHandle] {
-  cursor: move;
-}
-
-input[type="file"] {
-  display: none;
-}
-
-#loading-app {
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  font-size: 25px;
-  text-align: center;
-  background-color: white;
-  cursor: none;
-}
-
-#error {
-  background-color: #f4433677;
-  border: 1px solid #f44336;
-  border-radius: 1rem;
-  padding: 1.5rem;
-}
-
-#mouse-effect {
-  position: absolute;
-  border-radius: 100%;
-  transform: translate(-50%, -50%);
+body.dark-purple {
+  @include apply-purple-theme();
 }
