--- a/src/app/components/navigation/environment/environment.component.scss
+++ b/src/app/components/navigation/environment/environment.component.scss
@@ -31,3 +31,7 @@
 ::ng-deep.mat-mdc-menu-panel {
   max-width: none !important;
 }
+
+#menu-trigger {
+  color: var(--armonik-header-color) !important
+}
