chore: update selected button color

--- a/src/app/settings/component/theme-selector.component.scss
+++ b/src/app/settings/component/theme-selector.component.scss
@@ -10,6 +10,7 @@ button {
 
 .selected {
   background-color: var(--armonik-header-color);
+  color: var(--armonik-header-background);
 }
 
 .docs-theme-icon-background {
