--- a/src/app/components/filters/dialog/filters-dialog-and.component.html
+++ b/src/app/components/filters/dialog/filters-dialog-and.component.html
@@ -13,14 +13,14 @@
 
     <section>
       @if (!$last) {
-        <span i18n style="margin-left: 0.2rem;">And</span>
+        <span i18n style="margin-left: 1rem;">And</span>
       } @else {
         <button mat-button (click)="add()" i18n-matTooltip matTooltip="Add a condition">
           <mat-icon [fontIcon]="getIcon('add')" />
           <span i18n>And</span>
         </button>
       }
-      <button mat-icon-button (click)="remove($index)" i18n-matTooltip matTooltip="Delete this condition">
+      <button mat-icon-button (click)="remove($index)" i18n-matTooltip [disabled]="filterAnd.length === 1" matTooltip="Delete this condition">
         <mat-icon [fontIcon]="getIcon('delete')" />
       </button>
     </section>
