--- a/src/app/results/show.component.html
+++ b/src/app/results/show.component.html
@@ -4,6 +4,10 @@
     <span i18n="Page title"> Result </span>
   </div>
   <div class="actions" actions>
+  <button mat-button [routerLink]="'/sessions/' + data()?.resultId">
+    <mat-icon [fontIcon]="getIcon('sessions')"/>
+    <span i18n>See Session</span>
+  </button>F
   <button mat-button [routerLink]="'/sessions/' + data()?.sessionId">
     <mat-icon [fontIcon]="getIcon('sessions')"/>
     <span i18n>See Session</span>
@@ -13,4 +17,11 @@
     <span i18n>See Owner Task</span>
   </button>
   </div>
+  <div class="actions" bonus-actions>
+    <button mat-flat-button color="accent" (click)="downloadResult(data()?.resultId)">
+      <span i18n>Download Result</span>
+      <mat-icon [fontIcon]="this.getIcon('download')" />
+    </button>
+  </div>
 </app-show-page>
+
