feat(result): Update

--- a/src/app/results/show.component.html
+++ b/src/app/results/show.component.html
@@ -7,7 +7,7 @@
   <button mat-button [routerLink]="'/sessions/' + data()?.resultId">
     <mat-icon [fontIcon]="getIcon('sessions')"/>
     <span i18n>See Session</span>
-  </button>F
+  </button>
   <button mat-button [routerLink]="'/sessions/' + data()?.sessionId">
     <mat-icon [fontIcon]="getIcon('sessions')"/>
     <span i18n>See Session</span>
