feat: Add guard for download result actions

--- a/src/app/components/inspection/byte-array.component.html
+++ b/src/app/components/inspection/byte-array.component.html
@@ -7,7 +7,7 @@
   } @else {
     <span class="binary-indicator" i18n>- Binary</span>
   }
-  @if (byteLength) {
+  @if (byteLength && hasDownloadPermission) {
     <button mat-icon-button (click)="download()">
       <mat-icon [fontIcon]="getIcon('download')" />
     </button>
