--- a/src/app/components/count-tasks-by-status.component.html
+++ b/src/app/components/count-tasks-by-status.component.html
@@ -1,7 +1,11 @@
-<app-view-tasks-by-status
-  [defaultQueryParams]="queryParams"
-  [loading]="loading"
-  [statusesGroups]="statusesGroups"
-  [statusesCount]="statusesCount()"
->
-</app-view-tasks-by-status>
+@if (hasCountPermission) {
+  <app-view-tasks-by-status
+    [defaultQueryParams]="queryParams"
+    [loading]="loading"
+    [statusesGroups]="statusesGroups"
+    [statusesCount]="statusesCount()"
+  >
+  </app-view-tasks-by-status>
+} @else {
+  <span i18n>No permission to view tasks count</span>
+}
