--- a/src/app/dashboard/components/add-line-dialog.component.html
+++ b/src/app/dashboard/components/add-line-dialog.component.html
@@ -1,16 +1,26 @@
 <h2 mat-dialog-title i18n="Dialog title">Add a line</h2>
 
-<form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+@if (hasAvailableTypes) {
+  <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+    <mat-dialog-content>
+      <mat-form-field appearance="outline">
+        <mat-label for="name" i18n="Name of the statuses group"> Name </mat-label>
+        <input matInput id="name" type="text" formControlName="name" i18n-placeholder="Placeholder" placeholder="Name of your line" required i18n="Input error">
+      </mat-form-field>
+      <app-autocomplete [options]="types" [value]="type" [label]="typeLabel" (valueChange)="onTypeChange($event)" />
+    </mat-dialog-content>
+
+    <mat-dialog-actions align="end">
+      <button mat-button (click)="onCancel()" type="button" i18n="Dialog action"> Cancel </button>
+      <button mat-flat-button type="submit" color="primary" [disabled]="!validType" i18n="Dialog action"> Confirm </button>
+    </mat-dialog-actions>
+  </form>
+} @else {
   <mat-dialog-content>
-    <mat-form-field appearance="outline">
-      <mat-label for="name" i18n="Name of the statuses group"> Name </mat-label>
-      <input matInput id="name" type="text" formControlName="name" i18n-placeholder="Placeholder" placeholder="Name of your line" required i18n="Input error">
-    </mat-form-field>
-    <app-autocomplete [options]="types" [value]="type" [label]="typeLabel" (valueChange)="onTypeChange($event)" />
+    <p i18n="No permissions message">You don't have permissions to add any type of line.</p>
   </mat-dialog-content>
 
   <mat-dialog-actions align="end">
-    <button mat-button (click)="onCancel()" type="button" i18n="Dialog action"> Cancel </button>
-    <button mat-flat-button type="submit" color="primary" [disabled]="!validType" i18n="Dialog action"> Confirm </button>
+    <button mat-button (click)="onCancel()" type="button" i18n="Dialog action"> Close </button>
   </mat-dialog-actions>
-</form>
+}
