--- a/src/app/dashboard/index.component.html
+++ b/src/app/dashboard/index.component.html
@@ -37,30 +37,67 @@
   
   <main class="lines" [style]="'grid-template-columns: repeat(' + columns + ', 1fr);'">
     @for (line of lines; track line.name+line.type) {
-      <section>
-        <app-page-section-header [icon]="getLineIcon(line.type)">
-          <span [id]="line.type + '-' + $index" i18n="Section title">{{ line.name }}</span>
-        </app-page-section-header>
-        @switch (line.type) {
-          @case ('CountStatus') {
-            <app-dashboard-task-status-line [line]="line" (lineChange)="onSaveChange()" (lineDelete)="onDeleteLine($event)"/>
-          }
-          @case ('Applications') {
-            <app-dashboard-applications-line [line]="line" (lineChange)="onSaveChange()" (lineDelete)="onDeleteLine($event)"/>
-          }
-          @case ('Results') {
-            <app-dashboard-results-line [line]="line" (lineChange)="onSaveChange()" (lineDelete)="onDeleteLine($event)"/>
-          }
-          @case ('Partitions') {
-            <app-dashboard-partitions-line [line]="line" (lineChange)="onSaveChange()" (lineDelete)="onDeleteLine($event)"/>
-          }
-          @case ('Sessions') {
-            <app-dashboard-sessions-line [line]="line" (lineChange)="onSaveChange()" (lineDelete)="onDeleteLine($event)"/>
-          }
-          @case ('Tasks') {
-            <app-dashboard-tasks-line [line]="line" (lineChange)="onSaveChange()" (lineDelete)="onDeleteLine($event)"/>
+      @switch (line.type) {
+        @case ('CountStatus') {
+          @if (hasCountStatusPermission) {
+            <section>
+              <app-page-section-header [icon]="getLineIcon(line.type)">
+                <span [id]="line.type + '-' + $index" i18n="Section title">{{ line.name }}</span>
+              </app-page-section-header>
+              <app-dashboard-task-status-line [line]="line" (lineChange)="onSaveChange()" (lineDelete)="onDeleteLine($event)"/>
+            </section>
           }
         }
-      </section>
+        @case ('Applications') {
+          @if (hasApplicationsPermission) {
+            <section>
+              <app-page-section-header [icon]="getLineIcon(line.type)">
+                <span [id]="line.type + '-' + $index" i18n="Section title">{{ line.name }}</span>
+              </app-page-section-header>
+              <app-dashboard-applications-line [line]="line" (lineChange)="onSaveChange()" (lineDelete)="onDeleteLine($event)"/>
+            </section>
+          }
+        }
+        @case ('Results') {
+          @if (hasResultsPermission) {
+            <section>
+              <app-page-section-header [icon]="getLineIcon(line.type)">
+                <span [id]="line.type + '-' + $index" i18n="Section title">{{ line.name }}</span>
+              </app-page-section-header>
+              <app-dashboard-results-line [line]="line" (lineChange)="onSaveChange()" (lineDelete)="onDeleteLine($event)"/>
+            </section>
+          }
+        }
+        @case ('Partitions') {
+          @if (hasPartitionsPermission) {
+            <section>
+              <app-page-section-header [icon]="getLineIcon(line.type)">
+                <span [id]="line.type + '-' + $index" i18n="Section title">{{ line.name }}</span>
+              </app-page-section-header>
+              <app-dashboard-partitions-line [line]="line" (lineChange)="onSaveChange()" (lineDelete)="onDeleteLine($event)"/>
+            </section>
+          }
+        }
+        @case ('Sessions') {
+          @if (hasSessionsPermission) {
+            <section>
+              <app-page-section-header [icon]="getLineIcon(line.type)">
+                <span [id]="line.type + '-' + $index" i18n="Section title">{{ line.name }}</span>
+              </app-page-section-header>
+              <app-dashboard-sessions-line [line]="line" (lineChange)="onSaveChange()" (lineDelete)="onDeleteLine($event)"/>
+            </section>
+          }
+        }
+        @case ('Tasks') {
+          @if (hasTasksPermission) {
+            <section>
+              <app-page-section-header [icon]="getLineIcon(line.type)">
+                <span [id]="line.type + '-' + $index" i18n="Section title">{{ line.name }}</span>
+              </app-page-section-header>
+              <app-dashboard-tasks-line [line]="line" (lineChange)="onSaveChange()" (lineDelete)="onDeleteLine($event)"/>
+            </section>
+          }
+        }
+      }
     }
   </main>
