--- a/src/app/results/show.component.html
+++ b/src/app/results/show.component.html
@@ -12,10 +12,12 @@
     <mat-icon [fontIcon]="getIcon('sessions')"/>
     <span i18n>See Session</span>
   </button>
-  <button mat-button [routerLink]="'/tasks/' + data()?.ownerTaskId">
-    <mat-icon [fontIcon]="getIcon('tasks')"/>
-    <span i18n>See Owner Task</span>
-  </button>
+  @if (hasOwnerTaskPermission) {
+    <button mat-button [routerLink]="'/tasks/' + data()?.ownerTaskId">
+      <mat-icon [fontIcon]="getIcon('tasks')"/>
+      <span i18n>See Owner Task</span>
+    </button>
+  }
   </div>
   <div class="actions" bonus-actions>
     <button mat-flat-button 
