--- a/src/app/tasks/index.component.html
+++ b/src/app/tasks/index.component.html
@@ -3,7 +3,8 @@
   <span i18n="Page title"> Tasks </span>
 </app-page-header>
 
-<mat-toolbar>
+@if (hasListTasksPermission) {
+  <mat-toolbar>
   <mat-toolbar-row>
     <app-table-index-actions-toolbar
       [loading]="loading()"
@@ -23,7 +24,11 @@
       (addToDashboard)="onAddToDashboard()"
       >
         <ng-container extra-buttons-right>
-          <button mat-flat-button color="accent" (click)="onCancelTasksSelection()" [disabled]="!selection.length">
+          <button mat-flat-button 
+                  [color]="hasCancelTaskPermission ? 'accent' : ''" 
+                  (click)="onCancelTasksSelection()" 
+                  [disabled]="!selection.length || !hasCancelTaskPermission"
+                  [class.disabled-button]="!hasCancelTaskPermission">
             <mat-icon matListIcon aria-hidden="true" fontIcon="stop"/>
             <span i18n> Cancel Tasks </span>
           </button>
@@ -66,4 +71,4 @@
   (optionsUpdate)="onOptionsChange()"
   (selectionChange)="onSelectionChange($event)"
 />
-  
+}
