chore: only display buttons when select column is displayed

--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -7,3 +7,9 @@ em {
 table {
   background-color: var(--armonik-table-background) !important;
 }
+
+::ng-deep {
+  .mat-mdc-table-sticky-border-elem-left {
+    width: 2.5rem;
+  }
+}
