--- a/src/app/dashboard/components/lines/tasks-line.component.html
+++ b/src/app/dashboard/components/lines/tasks-line.component.html
@@ -52,7 +52,7 @@
     />
   </mat-toolbar-row>
   <mat-toolbar-row class="grpc-actions">
-    <app-table-grpc-actions [refresh$]="tableDataService.refresh$" [selection]="selection" [selectDisplayed]="hasSelectColumnDisplayed()" />
+    <app-table-grpc-actions [selection]="selection" [selectDisplayed]="hasSelectColumnDisplayed()" />
   </mat-toolbar-row>
 </mat-toolbar>
 <app-tasks-table
