--- a/src/app/results/components/table.component.html
+++ b/src/app/results/components/table.component.html
@@ -1,3 +1,3 @@
-<app-table [trackBy]="trackBy" [columns]="columns" [data]="data()" [total]="total()" 
+<app-table [trackBy]="trackBy" [columns]="columns" [dataComparator]="isDataRawEqual" [data]="data()" [total]="total()" 
   [actions]="actions" [options]="options" [lockColumns]="lockColumns" (optionsChange)="onOptionsChange()"
-  [statusesService]="statusesService" (columnDrop)="onDrop($event)" />
+  [statusesService]="statusesService" (columnDrop)="onDrop($event)" (selectionChange)="onSelectionChange($event)" />
