--- a/src/app/components/table/table-grpc-actions.component.html
+++ b/src/app/components/table/table-grpc-actions.component.html
@@ -1,4 +1,4 @@
-@if (selectDisplayed) {
+@if (grpcActionsService && selectDisplayed) {
 @for (action of grpcActionsService.actions; track $index) {
 <button mat-flat-button color="accent" (click)="action.click(selection)"  [disabled]="selection.length === 0">
   <span i18n>{{ action.label }}s</span>
