feat: grpc actions bar (#1325)

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -64,3 +64,7 @@ input[type="file"] {
   border-radius: 100%;
   transform: translate(-50%, -50%);
 }
+
+.grpc-actions {
+  height: fit-content !important;
+}
