--- a/src/app/dashboard/components/lines/tasks-line.component.html
+++ b/src/app/dashboard/components/lines/tasks-line.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar class="index-toolbar">
   <mat-toolbar-row>
     <app-table-dashboard-actions-toolbar
       [loading]="loading()"
@@ -50,6 +50,9 @@
       (filtersChange)="onFiltersChange($event)" 
       (showFiltersChange)="onShowFiltersChange($event)"
     />
+  </mat-toolbar-row>
+  <mat-toolbar-row class="grpc-actions">
+    <app-table-grpc-actions [refresh$]="tableDataService.refresh$" [selection]="selection" [selectDisplayed]="hasSelectColumnDisplayed()" />
   </mat-toolbar-row>
 </mat-toolbar>
 <app-tasks-table
