--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -65,6 +65,13 @@ input[type="file"] {
   transform: translate(-50%, -50%);
 }
 
+.environment {
+  background: white;
+  padding: 0 1rem;
+  border-radius: 1rem;
+  height: fit-content;
+}
+
 .grpc-actions {
   height: fit-content !important;
 }
