--- a/src/app/components/navigation/environment/dialog/conflicting-environment.dialog.html
+++ b/src/app/components/navigation/environment/dialog/conflicting-environment.dialog.html
@@ -1,21 +1,21 @@
-<h2 mat-dialog-title>Conflicting Hosts</h2>
+<h2 mat-dialog-title i18n>Conflicting Hosts</h2>
 
 <mat-dialog-content>
-  <p>You have conflicting hosts configuration regarding the address: {{ endpoint }}</p>
+  <p i18n>You have conflicting hosts configuration regarding the address: {{ endpoint }}</p>
 
   <section>
     @let old = oldEnv();
     @let newE = newEnv();
     @if (old && newE) {
       <div>
-        <p>Old configuration: </p>
+        <p i18n>Old configuration: </p>
         <article class="environment" [style]="'color:' + old.color + ';'" [matTooltip]="old.description">
           {{ old.name }} {{ old.version }}
         </article>
       </div>
 
       <div>
-        <p>New configuration: </p>
+        <p i18n>New configuration: </p>
         <article class="environment" [style]="'color:' + newE.color + ';'" [matTooltip]="newE.description">
           {{ newE.name }} {{ newE.version }}
         </article>
@@ -25,6 +25,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="false">Keep the old environment</button>
-  <button mat-button [mat-dialog-close]="true">Use the new environment</button>
+  <button mat-button [mat-dialog-close]="false" i18n>Keep the old environment</button>
+  <button mat-button [mat-dialog-close]="true" i18n>Use the new environment</button>
 </mat-dialog-actions>
