--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -1,21 +1,33 @@
 @use 'styles' as *;
 @use '@angular/material' as mat;
 
-mat-sidenav-container {
-  height: calc(100% - 56px) !important;
+::ng-deep {
+  .mat-drawer-inner-container {
+    @include flex-col();
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+  }
 }
 
-.sidenav {
-  width: 200px;
-  margin: 0.25rem 0;
+main {
+  padding: 1rem 50px;
 }
 
-.mat-toolbar {
-  margin-bottom: 0 !important;
+.spacer {
+  flex: 1 1 auto;
 }
 
 .sidenav .mat-toolbar {
   background: inherit;
+}
+
+.mat-toolbar {
+  margin-bottom: 0 !important;
+
+  .mdc-icon-button > .mat-icon {
+    color: var(--armonik-header-color) !important;
+  }
 }
 
 .mat-toolbar.mat-primary {
@@ -29,29 +41,48 @@ mat-sidenav-container {
   background-color: var(--armonik-navbar-selected);
 }
 
-.spacer {
-  flex: 1 1 auto;
+.environment {
+  background: white;
+  padding: 0 1rem;
+  border-radius: 0.25rem;
 }
 
-main {
-  padding: 1rem 50px;
+mat-sidenav-container {
+  height: calc(100% - 56px) !important;
 }
 
-.mdc-icon-button > .mat-icon {
-  color: var(--armonik-header-color) !important;
+.sidenav {
+  width: fit-content;
+  margin: 0.25rem 0;
 }
 
-::ng-deep {
-  .mat-drawer-inner-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+.nav-container {
+  @include flex-col();
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  overflow: hidden;
+
+  #add-item-button {
+    width: fit-content;
+    margin-bottom: 0.5rem;
   }
+}
 
-  .mdc-list {
-    width: 100%;
+ul {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+
+  li {
+    @include flex-row($gap: 0.5rem, $wrap: nowrap);
+    list-style: none !important;
   }
+}
+
+.handle {
+  margin-right: 0.5rem;
 }
 
 app-scheme-switcher {
