chore: address comment

--- a/src/app/settings/component/theme-selector.component.html
+++ b/src/app/settings/component/theme-selector.component.html
@@ -2,7 +2,7 @@
   <span i18n>Theme</span>
 </app-page-section-header>
 
-<p>Choose how you want your application to look.</p>
+<p i18n>Choose how you want your application to look.</p>
 
 <section>
 @for (theme of availableThemes; track theme) {
