chore: theme selector located in settings page (#1296)

--- a/src/app/settings/component/theme-selector.component.scss
+++ b/src/app/settings/component/theme-selector.component.scss
@@ -1,7 +1,17 @@
-button.theme {
-  mat-icon {
-    color: var(--armonik-header-color) !important;
-  }
+section {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+button {
+  width: fit-content;
+}
+
+.selected {
+  background-color: var(--armonik-header-color);
+  color: var(--armonik-header-background);
 }
 
 .docs-theme-icon-background {
