--- a/src/app/settings/index.component.html
+++ b/src/app/settings/index.component.html
@@ -28,6 +28,8 @@
       }
       <button mat-stroked-button (click)="resetToDefaultSideBar()" type="button" i18n="Form">Reset to default</button>
     </div>
+
+    <app-theme-selector />
   </article>
 
   <article>
