--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -23,8 +23,9 @@
   <app-versions-menu />
   <button mat-icon-button [routerLink]="'/profile'" [disabled]="isProfileButtonDisabled()" matTooltip="Profile"
     i18n-matTooltip="Profile button tooltip">
-    <mat-icon [fontIcon]="getIcon('profile')"></mat-icon>
+    <mat-icon [fontIcon]="getIcon('profile')"/>
   </button>
+  <app-settings-button />
 </mat-toolbar>
 <mat-sidenav-container autosize class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
@@ -55,10 +56,6 @@
           </li>
           }
         </ul>
-        <a mat-list-item [routerLink]="'/settings'" routerLinkActive="navbar-item-selected">
-          <mat-icon matListItemIcon aria-hidden="true" fontIcon="settings"></mat-icon>
-          <span matListItemTitle> {{ settingsItem }} </span>
-        </a>
       </mat-nav-list>
       @if (isEditing) {
       <button id="add-item-button" mat-flat-button color="primary" (click)="addNewSideBarItem()" i18n>Add item</button>
