--- a/src/app/components/navigation/external-services/manage-external-services-dialog.component.html
+++ b/src/app/components/navigation/external-services/manage-external-services-dialog.component.html
@@ -4,9 +4,9 @@
   <p i18n="Dialog description">
     Bookmark your favorite external services to access them quickly from the navigation bar.
   </p>
-  @if (externalServices.length) {
+  @if (data.externalServices.length) {
     <ul class="external-services" cdkDropList (cdkDropListDropped)="onDrop($event)">
-      @for (externalService of externalServices; track externalService.url) {
+      @for (externalService of data.externalServices; track externalService.url) {
         <li cdkDrag>
         @if(editedService !== externalService) {
             <mat-icon aria-hidden="true" [fontIcon]="getIcon('drag')" cdkDragHandle/>
@@ -35,6 +35,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button mat-button (click)="onNoClick()" i18n="Dialog action"> Cancel </button>
-  <button mat-flat-button [mat-dialog-close]="externalServices" color="primary" i18n="Dialog action"> Confirm </button>
+  <button mat-button mat-dialog-close i18n="Dialog action"> Cancel </button>
+  <button mat-flat-button [mat-dialog-close]="data.externalServices" color="primary" i18n="Dialog action"> Confirm </button>
 </mat-dialog-actions>
