--- a/src/app/components/table/table-inspect-message-dialog.component.html
+++ b/src/app/components/table/table-inspect-message-dialog.component.html
@@ -10,5 +10,5 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-  <button mat-flat-button (click)="onNoClick()" color="primary">Close</button>
+  <button mat-flat-button mat-dialog-close color="primary">Close</button>
 </mat-dialog-actions>
