--- a/src/app/components/dialogs/columns-modify-dialog/columns-modify-dialog.component.scss
+++ b/src/app/components/dialogs/columns-modify-dialog/columns-modify-dialog.component.scss
@@ -9,11 +9,13 @@ h3 {
 article {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-top: 1rem;
 }
 
 article > div {
   display: flex;
+  align-items: center;
 }
 
 section {
