--- a/src/app/components/navigation/environment/dialog/add-environment.dialog.html
+++ b/src/app/components/navigation/environment/dialog/add-environment.dialog.html
@@ -24,7 +24,7 @@
         <article>
           <mat-form-field>
             <mat-label for="description" i18n>Description</mat-label>
-            <input matInput id="description" matInput type="text" formControlName="description" placeholder="1.6.7">
+            <input matInput id="description" matInput type="text" formControlName="description" placeholder="Environment description">
           </mat-form-field>
           <div>
             <label for="font-color" [style.opacity]="choiceForm.value ? '0.5' : '1'" i18n>Color</label>
