--- a/src/app/dashboard/components/lines/partitions-line.component.html
+++ b/src/app/dashboard/components/lines/partitions-line.component.html
@@ -32,4 +32,5 @@
   [displayedColumns]="displayedColumns()"
   [lockColumns]="lockColumns"
   (optionsUpdate)="onOptionsChange()"
+  (columnUpdate)="onColumnsChange($event)"
 />
