--- a/src/app/dashboard/components/lines/tasks-line.component.html
+++ b/src/app/dashboard/components/lines/tasks-line.component.html
@@ -53,4 +53,5 @@
   [urlTemplate]="urlTemplate"
   (selectionChange)="onSelectionChange($event)"
   (optionsUpdate)="onOptionsChange()"
+  (columnUpdate)="onColumnsChange($event)"
 />
