--- a/src/app/results/index.component.html
+++ b/src/app/results/index.component.html
@@ -43,4 +43,5 @@
   [lockColumns]="lockColumns"
   (optionsUpdate)="onOptionsChange()"
   (selectionChange)="onSelectionChange($event)"
+  (columnUpdate)="onColumnsChange($event)"
 />
