--- a/src/app/tasks/index.component.html
+++ b/src/app/tasks/index.component.html
@@ -63,5 +63,6 @@
   (retries)="onRetries($event)"
   (optionsUpdate)="onOptionsChange()"
   (selectionChange)="onSelectionChange($event)"
+  (columnUpdate)="onColumnsChange($event)"
 />
   
