--- a/src/app/applications/index.component.html
+++ b/src/app/applications/index.component.html
@@ -38,4 +38,5 @@
   [displayedColumns]="displayedColumns()"
   [lockColumns]="lockColumns"
   (optionsUpdate)="onOptionsChange()"
+  (columnUpdate)="onColumnsChange($event)"
 />
